--- a/templates/dshop/admin/orderitem-product-extra.html
+++ b/templates/dshop/admin/orderitem-product-extra.html
@@ -1,5 +1,18 @@
+{% load i18n %}
+
 {% for row in rows %}
   <div style="margin-bottom:0.5rem;">
     <span style="font-weight:900;margin-right:0.5rem;">{{ row.1.label }} :</span>{% if row.1.amount %}<span>{{ row.1.amount }}</span>{% endif %}{% if row.1.content %}<span>{{ row.1.content }}</span>{% endif %}
   </div>
 {% endfor %}
+
+{% if variables and variables.attributes %}
+    {% if variables.attributes|length > 0 %}
+        <div style="margin-bottom:0.5rem;">
+            <span style="font-weight:900;margin-right:0.5rem;">{% trans 'Attributes' %} :</span>
+            {% for a in variables.attributes %}
+                <div style="font-weight:500;margin-left:2rem;">{{ a }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endif %}
