--- a/dshop/templates/theme/default/plugins/products-brands.html
+++ b/dshop/templates/theme/default/plugins/products-brands.html
@@ -1,8 +1,8 @@
 {% load static thumbnail cms_tags i18n dshop_tags %}
 
 <!-- BEGIN: products-brands -->
-  <section class="section-products-brands text-center">
-    <div class="container">
+  <section class="section-products-brands text-center py-5">
+    <div class="container-fluid">
       {% if instance.title or instance.text %}
         <div class="row pb-5">
           <div class="col-12">
