update brand carousel

--- a/dshop/templates/theme/default/plugins/products-brands.html
+++ b/dshop/templates/theme/default/plugins/products-brands.html
@@ -2,9 +2,9 @@
 
 <!-- BEGIN: products-brands -->
   <section class="section-products-brands text-center py-5">
-    <div class="container-fluid">
+    <div class="container">
       {% if instance.title or instance.text %}
-        <div class="row pb-5">
+        <div class="row pb-3">
           <div class="col-12">
             {% if instance.title %}
               <h2 class="title">
