--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -6,6 +6,18 @@ body{
   min-width:300px;
 }
 
+main > .container > .row {
+    align-items: center;
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1400px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
 /* ===--- Topnav ---=== */
 .topnav{
   background-color:#202325;
@@ -329,14 +341,21 @@ body{
 }
 
 /* ===--- Section Marques ---=== */
-.carousel-brands .owl-item {
+.section-products-brands {
+    padding: 3rem 0;
+}
+.section-products-brands .owl-item {
     background-color: #fff;
     display: table;
     height: 300px;
 }
-.carousel-brands .owl-item > .item {
+.section-products-brands .owl-item > .item {
     vertical-align: middle;
     display: table-cell;
+}
+.section-products-brands .owl-item .brand img {
+    width: auto;
+    margin: 0 auto;
 }
 
 /**/
