--- a/dshop/templates/theme/default/plugins/products-brands.html
+++ b/dshop/templates/theme/default/plugins/products-brands.html
@@ -19,7 +19,7 @@
           </div>
         </div>
       {% endif %}
-      <div class="row carousel-brands">
+      <div class="carousel-brands">
         <div class="product_slider carousel_slider owl-carousel owl-theme nav_style1" data-loop="true" data-dots="false" data-nav="true" data-margin="20" data-responsive='{"0":{"items": "1"}, "481":{"items": "2"}, "768":{"items": "3"}, "1199":{"items": "{{instance.howmany}}"}}'>
           {% dm_get_brands_all as brands %}
           {% for brand in brands %}
