--- a/dshop/templates/theme/default/navbar/menu-parent.html
+++ b/dshop/templates/theme/default/navbar/menu-parent.html
@@ -58,7 +58,7 @@
         </li>
     {% else %}
         <li class="nav-item child{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if child.children %} dropdown{% endif %}">
-            <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}" class="nav-link nav_item{% if child.selected %} active{% endif %}">{{ child.get_menu_title }}</a>
+            <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}" class="nav-link nav_item dm-menu-split{% if child.selected %} active{% endif %}">{{ child.get_menu_title }}</a>
             {% if child.children %}
                 {% show_menu from_level to_level extra_inactive extra_active 'theme/default/navbar/menu-child.html' "" "" child %}
             {% endif %}
