--- a/dshop/templates/theme/default/email/base.html
+++ b/dshop/templates/theme/default/email/base.html
@@ -1,6 +1,12 @@
 {% extends "shop/email/base.html" %}
-{% load post_office %}
+{% load post_office dshop_tags thumbnail %}
 
 {% block email-logo %}
-<img src="{% inline_image 'boutique/img/logo-dark.png' %}" width="200" style="margin: 20px auto; display: block;" />
+    {% dm_get_logos as logos %}
+    {% if logos %}
+        {% thumbnail logos.logolight "200x70" upscale as thumb %}
+        <img src="{{thumb.url}}" width="200" style="margin: 20px auto; display: block;" />
+    {% else %}
+        <img src="{% inline_image 'dshop/img/logo-dshop.png' %}" width="200" style="margin: 20px auto; display: block;" />
+    {% endif %}
 {% endblock %}
