--- a/dshop/templates/dshop/email/password-reset-body.html
+++ b/dshop/templates/dshop/email/password-reset-body.html
@@ -1,4 +1,4 @@
-{% extends "shop/email/base.html" %}
+{% extends "shop/email/password-reset-body.html" %}
 {% load post_office dshop_tags thumbnail %}
 
 {% block email-logo %}
