--- a/dshop/templates/theme/default/email/password-reset-body.html
+++ b/dshop/templates/theme/default/email/password-reset-body.html
@@ -2,5 +2,11 @@
 {% load post_office %}
 
 {% block email-logo %}
-<img src="{% inline_image 'boutique/img/logo-dark.png' %}" width="200" style="margin: 20px auto; display: block;" />
+    {% dm_get_logos as logos %}
+    {% if logos %}
+        {% thumbnail logos.logolight "200x70" upscale as thumb %}
+        <img src="{% inline_image thumb.path %}" width="200" style="margin: 20px auto; display: block;" />
+    {% else %}
+        <img src="{% inline_image 'dshop/img/logo-dshop.png' %}" width="200" style="margin: 20px auto; display: block;" />
+    {% endif %}
 {% endblock %}
