vignette out of stock

--- a/dshop/static/dshop/shopwise/css/style.css
+++ b/dshop/static/dshop/shopwise/css/style.css
@@ -5037,6 +5037,20 @@ footer .widget_title {
 	margin-right: 5px;
 	margin-left: 3px;
 }
+.product_price .product_sale_outofstock{
+    background-color: #fff;
+    border: 1px solid #b52d2d;
+    color: #b52d2d;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 100%;
+    text-transform: uppercase;
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 18px 4px;
+}
 .product_price .product_sale_discounted{
     background-color: #fff;
     border: 1px solid #458d92;
