--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -149,7 +149,9 @@
                           <del>{{product.unit_price}}</del>
                         {% endif %}
                       {% endif %}
-                      {% if product.is_discounted %}
+                      {% if product.quantity == 0 %}
+                        <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
+                      {% elif product.is_discounted %}
                         <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                       {% endif %}
                     </div>
