--- a/templates/plugins/products-by-category.html
+++ b/templates/plugins/products-by-category.html
@@ -89,8 +89,10 @@
                                                                 <del>{{product.unit_price}}</del>
                                                             {% endif %}
                                                         {% endif %}
-                                                        {% if product.is_discounted %}
-                                                            <span class="product_sale_discounted">{% trans "Discounted" %}</span>
+                                                        {% if product.quantity == 0 %}
+                                                          <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
+                                                        {% elif product.is_discounted %}
+                                                          <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                                                         {% endif %}
                                                     </div>
                                                 </div>
