--- a/dshop/templates/dshop/pages/drawer-user.html
+++ b/dshop/templates/dshop/pages/drawer-user.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   {% else %}
-  <div class="dm-drawer-inner">
+  <div class="dm-drawer-inner no-bottom">
     <h2 class="drawer-title mb-3">{% trans 'My Account' %}</h2>
     <div class="dm-drawer-user-tabs">
       <div class="dm-drawer-tabs-login">
