--- a/dshop/static/theme/default/css/style.css
+++ b/dshop/static/theme/default/css/style.css
@@ -284,3 +284,22 @@ a:hover{
 .search-btn {
     text-align:right;
 }
+
+
+@media (min-width:768px) and (max-width:991px) {
+    nav .navbar-collapse{ position: fixed !important; width: 250px !important; top: 136px !important; right: 0 !important; left: auto !important;}
+    
+}
+
+@media (min-width:200px) and (max-width:991px) {
+    .navbar-nav{ background: #2c2c2e !important; max-height: 62vh !important; height: auto !important; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0px 0px 5px rgba(255,255,255,0.2) !important;}
+    .navbar-nav li a{ display: block; font-size: 14px !important; line-height: 18px !important; color: #fff !important;}    
+    .navbar-nav li{ position: relative; border-top: 1px solid rgba(255,255,255,0.1);}
+    .navbar-nav li a.dropdown-toggle-split{ position: absolute; right: 10px; top: 0; padding: 12px 7px !important;}
+    .navbar-nav li a.menu-link{ padding: 8px 40px 8px 10px !important; background: #2c2c2e;}
+    .navbar-nav li .dropdown-menu.dropdown{ box-shadow: none !important; background: #2c2c2e; padding: 0;}
+    .navbar-nav li .dropdown-menu.dropdown ul li a.dropdown-item{ padding-left: 20px !important;}
+    .navbar-nav li .dropdown-menu .dropdown-menu{ padding: 0 0 0 0; box-shadow: none; background: #2c2c2e !important;}
+    .navbar-nav li .dropdown-menu .dropdown-menu ul li a.dropdown-item{ padding-left: 30px !important;}
+}
+
