--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -418,6 +418,20 @@ main > .container > .row {
     padding: 2px 10px;
     margin: 0;
 }
+.pr_detail .pr_desc h1,
+.pr_detail .pr_desc h2,
+.pr_detail .pr_desc h3,
+.pr_detail .pr_desc h4,
+.pr_detail .pr_desc h5,
+.pr_detail .pr_desc h6,
+.tab-content.shop_info_tab h1,
+.tab-content.shop_info_tab h2,
+.tab-content.shop_info_tab h3,
+.tab-content.shop_info_tab h4,
+.tab-content.shop_info_tab h5,
+.tab-content.shop_info_tab h6 {
+    font-size: 1rem;
+}
 
 /* ===--- Vos commandes ---=== */
 .service-content-box pre{
