--- a/dshop/templates/theme/default/plugins/bloc-textmedia.html
+++ b/dshop/templates/theme/default/plugins/bloc-textmedia.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       {% if instance.video and instance.colposition == 0 %}
-      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInLeft animated">
+      <div class="col-xl-6 col-lg-6 col-md-12 py-3 py-lg-0 wow fadeInLeft animated{% if instance.text_align %} align-self-center{% endif %}">
         <video controls preload width="585" height="300">
             {% with instance.video.extension as ext %}
             <source src="{{instance.video.url}}" type="video/{{ext}}" />
@@ -13,15 +13,14 @@
         </video>
       </div>
       {% elif instance.image and instance.colposition == 0 %}
-      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInLeft animated">
-        <div class="about-image">
+      <div class="col-xl-6 col-lg-6 col-md-12 py-3 py-lg-0 wow fadeInLeft animated{% if instance.text_align %} align-self-center{% endif %}">
+        <div class="about-image text-center">
           {% thumbnail instance.image "398x531" crop="scale" as thumb %}
           <img src="{{thumb.url}}" alt="" class="img-fluid">
         </div>
       </div>
       {% endif %}
-      <div
-        class="{% if instance.image or instance.video %}col-xl-6 col-lg-6 col-md-12{% else %}col-12{% endif %} mb-md-75 mb-sm-50 wow {% if instance.colposition == 0 %}fadeInRight{% else %}fadeInLeft{% endif %} animated">
+      <div class="{% if instance.image or instance.video %}col-xl-6 col-lg-6 col-md-12{% else %}col-12{% endif %} mb-md-75 mb-sm-50 wow {% if instance.colposition == 0 %}fadeInRight{% else %}fadeInLeft{% endif %} animated{% if instance.text_align %} align-self-center{% endif %}">
         {% if instance.title or instance.subtitle %}
         <div class="title-bl">
           {% if instance.title %}
@@ -43,7 +42,7 @@
         </div>
       </div>
       {% if instance.video and instance.colposition == 1 %}
-      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
+      <div class="col-xl-6 col-lg-6 col-md-12 py-3 py-lg-0 wow fadeInRight animated{% if instance.text_align %} align-self-center{% endif %}">
         <video controls preload width="585" height="300">
             {% with instance.video.extension as ext %}
             <source src="{{instance.video.url}}" type="video/{{ext}}" />
@@ -51,8 +50,8 @@
         </video>
       </div>
       {% elif instance.image and instance.colposition == 1 %}
-      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
-        <div class="about-image">
+      <div class="col-xl-6 col-lg-6 col-md-12 py-3 py-lg-0 wow fadeInRight animated{% if instance.text_align %} align-self-center{% endif %}">
+        <div class="about-image text-center">
           {% thumbnail instance.image "398x531" crop="scale" as thumb %}
           <img src="{{thumb.url}}" alt="" class="img-fluid">
         </div>
