--- a/dshop/static/theme/default/css/style.css
+++ b/dshop/static/theme/default/css/style.css
@@ -249,6 +249,7 @@ a:hover{
 /**/
 #app {
   color:#758987;
+  min-height: 50vh;
 }
 #app.v-application .primary{
   background-color:#458d91!important;
@@ -366,3 +367,21 @@ a:hover{
     .navbar-nav li .dropdown-menu .dropdown-menu ul li a.dropdown-item{ padding-left: 30px !important;}
 }
 
+/* ===--- FIXES ---=== */
+@media (min-width: 768px) {
+    .col-6.col-md-3 {
+        -ms-flex: 0 0 25%;
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-6.col-md-4 {
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 33.333333%;
+        max-width: 33.333333%;
+    }
+    .col-6.col-md-5 {
+        -ms-flex: 0 0 41.666667%;
+        flex: 0 0 41.666667%;
+        max-width: 41.666667%;
+    }
+}
