--- a/dshop/templates/theme/default/plugins/products-vedette.html
+++ b/dshop/templates/theme/default/plugins/products-vedette.html
@@ -56,12 +56,19 @@
                     {% if product.variants %}
                         {% if product.variants.first %}
                             {% product_variant_discount_price product.variants.first.id as real_price %}
-                            <span class="price">{{real_price}}</span>
+                                <span class="price">{{real_price}}</span>
                             {% if real_price != product.variants.first.unit_price %}
-                            <del>{{product.variants.first.unit_price}}</del>
+                                <del>{{product.variants.first.unit_price}}</del>
                             {% endif %}
                         {% else %}
                             <span class="price">-</span>
+                        {% endif %}
+                        {% dm_variants_is_outofstock product.variants as variants_outofstock %}
+                        {% dm_variants_is_discounted product.variants as variants_isdiscounted %}
+                        {% if variants_outofstock %}
+                            <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
+                        {% elif variants_isdiscounted %}
+                            <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                         {% endif %}
                     {% else %}
                       {% product_discount_price product.id as real_price %}
