--- a/dshop/templates/dshop/products/dropdown-product-media.html
+++ b/dshop/templates/dshop/products/dropdown-product-media.html
@@ -1,7 +1,9 @@
 {% extends "shop/products/dropdown-product-media.html" %}
 {% load thumbnail %}
 {% block sample-image %}
-	{% thumbnail product.sample_image 50x50 crop as thumb %}
-	{% thumbnail product.sample_image 100x100 crop as thumb2 %}
-	<img class="mr-1" width="{{ thumb.width }}" height="{{ thumb.height }}" src="{{ thumb.url }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+    {% if product.sample_image %}
+        {% thumbnail product.sample_image 50x50 crop as thumb %}
+        {% thumbnail product.sample_image 100x100 crop as thumb2 %}
+        <img class="mr-1" width="{{ thumb.width }}" height="{{ thumb.height }}" src="{{ thumb.url }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+    {% endif %}
 {% endblock %}
